# Classification-Optimalization-Strategies

./: .gitignore  LICENSE  README.md  pyproject.toml
FETA_code/: xgboost_combined.ipynb
FETA_code/transformers/: lexical.py
VT/: create_collection.py  vt_checker.ipynb  vt_checker.py
combined/: SVM_combined.ipynb  cnn_combined.ipynb  xgboost_combined.ipynb
feature_selection/: Playground.ipynb  config.py  loader.py
feature_selection/transformers/: dns.py  lexical.py
one-line-processing/: feta_one_line.ipynb
params_selection/: params_tuning_CNN.ipynb  params_tuning_XGBoost.ipynb  params_tunins_SVM.ipynb
params_selection/transformers/: drop_nontrain.py
preprocessing/: cli.py  preprocess.py
utils/: preprocess_one_domain.py
