[tool.poetry]
name = "master-thesis-package"
version = "0.1.0"
description = ""
authors = ["survivecz <poucpetr11@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.1.2"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
matplotlib = "^3.8.4"
shap = "^0.45.0"
pickle4 = "^0.0.1"
seaborn = "^0.13.2"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
click = "^8.1.7"
tldextract = "^5.1.2"
dnspython = "^2.6.1"
pyarrow = "^15.0.2"
pymongo = "^4.6.3"
pymongoarrow = "^1.3.0"
nltk = "^3.8.1"
numba = "^0.59.1"
numpy = "^1.26.4"
PDPbox = "^0.3.0"
schema = "^0.7.5"
transformers = "^4.39.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"
statsmodels = "^0.14.1"
torch = "^2.2.2"
category-encoders = "^2.6.3"
DateTime = "^5.5"
sklearn-pandas = "^2.2.0"
tensorflow = "^2.16.1"
toolkits = "^0.2.6"
skia-python = "^87.5"
opencv-python-headless = "^4.9.0.80"
tqdm = "^4.66.2"
math22 = "^2.2"
python-math = "^0.0.1"
logging4 = "^0.0.2"
joblib = "^1.3.2"
keras-pickle-wrapper = "^1.0.5"
scikeras = "^0.13.0"
pip = "^24.0"
install = "^1.3.5"
bayesian-optimization = "^1.4.3"
keras-tuner = "^1.4.7"
imblearn = "^0.0"
imbalanced-learn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
